fix stake button overlaps

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -80,7 +80,7 @@ button:active {
 }
 
 .coop-fox {
-  z-index:3000;
+  z-index:1000;
   position:fixed;
   top:0px;
   left:0px;
